backend-core: add email verifications
