# backend-core/swagger.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.2
 info:
   title: Boards API
-  description: This is the Boards public API documentation.
+  description: Boards public API documentation
   termsOfService: http://swagger.io/terms/
   contact:
     email: apiteam@swagger.io
@@ -139,6 +139,64 @@ paths:
                     type: array
                     items:
                       $ref: '#/components/schemas/User'
+  /users/email-verifications:
+    post:
+      tags:
+        - users
+      summary: Create a email verification record
+      description: Create a email verification record
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                user_id:
+                  type: string
+                code:
+                  type: string
+              required:
+                - user_id
+                - code
+      responses:
+        '201':
+          description: Successfully created email verification
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/EmailVerification'
+  /users/verify-email:
+    post:
+      tags:
+        - users
+      summary: Create a email verification record
+      description: Create a email verification record
+      parameters:
+        - name: user_id
+          in: query
+          description: ID of user
+          required: true
+          schema:
+            type: string
+        - name: code
+          in: query
+          description: Email verification code
+          required: true
+          schema:
+            type: string
+      responses:
+        '201':
+          description: Successfully verified email
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                example:
+                  message: Email verified.
   /boards:
     post:
       tags:
@@ -262,7 +320,7 @@ paths:
           required: false
           schema:
             type: string
-            enum: 
+            enum:
               - ACCEPTED
               - PENDING
               - IGNORED
@@ -408,6 +466,35 @@ components:
         email: johndoe@example.com
         password: password123
         is_guest: false
+        created_at: '2023-06-12T10:00:00Z'
+        updated_at: '2023-06-12T10:00:00Z'
+    EmailVerification:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+          description: ID of the email verification
+        user_id:
+          type: string
+          format: uuid
+          description: ID of the user
+        is_verified:
+          type: boolean
+          default: false
+          description: Verification status of the record
+        created_at:
+          type: string
+          format: date-time
+          description: Timestamp indicating the creation date
+        updated_at:
+          type: string
+          format: date-time
+          description: Timestamp indicating the last update date
+      example:
+        id: 426d0f9e-dbbd-4859-884c-276175c94ee3
+        user_id: d0865843-8494-4d6a-b9be-5c8f7d0e568f
+        is_verified: null
         created_at: '2023-06-12T10:00:00Z'
         updated_at: '2023-06-12T10:00:00Z'
     CreateBoardObject:
@@ -580,7 +667,7 @@ components:
           example: b9e95ae4-9c3f-412f-8b3b-201bd7083fc1
         title:
           type: string
-          example: "Summary of post group"
+          example: 'Summary of post group'
         pos_x:
           type: integer
           example: 10
